duckie/public/duckie.css
/*---------------------------------------------------------------------------*\
 |   duckie.css                                                              |
 |                                                                           |
 |   Copyright (c) 2012, Rajiv Bakulesh Shah, original author.               |
 |                                                                           |
 |       This file is free software; you can redistribute it and/or modify   |
 |       it under the terms of the GNU General Public License as published   |
 |       by the Free Software Foundation, either version 3 of the License,   |
 |       or (at your option) any later version.                              |
 |                                                                           |
 |       This file is distributed in the hope that it will be useful, but    |
 |       WITHOUT ANY WARRANTY; without even the implied warranty of          |
 |       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU   |
 |       General Public License for more details.                            |
 |                                                                           |
 |       You should have received a copy of the GNU General Public License   |
 |       along with this file.  If not, see:                                 |
 |           <http://www.gnu.org/licenses/>.                                 |
\*---------------------------------------------------------------------------*/


* {
  margin: 0;
  outline: 0;
  padding: 0;
  text-transform: lowercase;
}

body {
  color: #516064;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
  margin: 0 auto 0 auto;
  width: 800px;
}

a {
  color: #B62F2F;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

hgroup, article {
  margin-bottom: 50px;
}

h1 {
  color: #D1D9DC;
  font-size: 102px;
  letter-spacing: -7px;
  margin-top: -15px;
  margin-left: -4px;
  margin-bottom: -25px;
}

h1 a {
  color: #D1D9DC;
}

h1 a:hover {
  color: #B62F2F;
  text-decoration: none;
}

h2, h3 {
  color: #959EA1;
  font-size: 35px;
  font-weight: 300;
  letter-spacing: -2px;
}

fieldset {
  border: none;
}

input {
  border-radius: 4px;
  border: 1px solid #959EA1;
  color: #B62F2F;
  font: 16px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
  line-height: 150%;
  margin-top: 0.75em;
  padding: 0.2em;
  width: 480px;
}

#loading {
  display: none;
  height: 200px;
  width: 200px;
  text-indent: 250px;
  -webkit-mask-image: url(/spinner.png);
  background-color: #516064;
  -webkit-animation: spinnerRotate;
  -webkit-animation-duration: 3s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
}

@-webkit-keyframes spinnerRotate {
  from {
    -webkit-transform: rotate(0deg);
  } to {
    -webkit-transform: rotate(360deg);
  }
}

#templates {
  display: none;
}

.frame-outer {
  display: inline-block;
  width: 150px;
  height: 150px;
}

.frame-inner {
  display: inline-block;
  vertical-align: middle;
  width: 100%;
  height: auto;
}

img.photo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 120px;
  max-height: 120px;
  border: 1px solid #D1D9DC;
  padding: 5px;
  opacity: 0.85;
}

img.photo:hover {
  border: 1px solid #959EA1;
  opacity: 1.0;
}

#facebox img {
  max-width: 640px;
  max-height: 480px;
}

#no-results {
  display: none;
}

footer {
  padding-bottom: 3em;
}

